--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "[LinkedIn](https://www.linkedin.com/in/josh-curtis-77284769/) [GitHub](https://github.com/jcurti2)  *** ### ***Description*** #### This is my PetRock app where you try and obtain the rarest rock collection with limited monetary resources.  *** ### ***Techonologies Used*** * React * MongoDB * Node.js * Express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,10 @@
   },
   "homepage": "https://github.com/jcurti2/PetRock#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mongoose": "^6.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
